--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bemga ko'ra kod yozish</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- Biz loyihalarimizni Bemga ko'ra yozishimiz loyihalarimizdagi kodlarimizni klaslarini tartibli ko'rinishga keltiradi va kodimizni boshqa loyihalarda bemalol ishlatishimiz mumkun bo'ladi-->
